# sonic-mgmt-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  RUSTDOC_HANDOFF.md
config/: default.toml  inventory.example.toml  testbed.example.toml
crates/sonic-config/: Cargo.toml
crates/sonic-config/src/: app.rs  inventory.rs  lib.rs  testbed.rs  topology.rs
crates/sonic-core/: Cargo.toml
crates/sonic-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/sonic-device/: Cargo.toml
crates/sonic-device/src/: lib.rs
crates/sonic-device/src/connection/: console.rs  mod.rs  pool.rs  ssh.rs  telnet.rs
crates/sonic-device/src/facts/: cache.rs  mod.rs  parser.rs
crates/sonic-device/src/hosts/: cisco.rs  eos.rs  fanout.rs  mod.rs  ptf.rs  sonic.rs
crates/sonic-integration-tests/: Cargo.toml
crates/sonic-integration-tests/src/: lib.rs
crates/sonic-integration-tests/tests/: integration.rs
crates/sonic-mgmt-cli/: Cargo.toml
crates/sonic-mgmt-cli/src/: main.rs
crates/sonic-mgmt-cli/src/commands/: config.rs  device.rs  docker.rs  mod.rs  report.rs  sdn.rs  test.rs  testbed.rs  topology.rs
crates/sonic-mgmt-cli/src/interactive/: mod.rs  prompts.rs  setup.rs  wizard.rs
crates/sonic-reporting/: Cargo.toml
crates/sonic-reporting/src/: coverage.rs  junit.rs  lib.rs  storage.rs  uploader.rs
crates/sonic-sdn/: Cargo.toml  build.rs
crates/sonic-sdn/proto/: gnmi.proto  gnoi.proto  gnoi_types.proto  p4info.proto  p4runtime.proto
crates/sonic-sdn/proto/google/rpc/: status.proto
crates/sonic-sdn/src/: gnmi.rs  gnoi.rs  lib.rs  p4rt.rs
crates/sonic-testbed/: Cargo.toml
crates/sonic-testbed/src/: device_mgr.rs  health.rs  inventory.rs  lib.rs  manager.rs  operations.rs
crates/sonic-testing/: Cargo.toml
crates/sonic-testing/src/: discovery.rs  execution.rs  fixtures.rs  lib.rs  results.rs  runner.rs
crates/sonic-topology/: Cargo.toml
crates/sonic-topology/src/: allocator.rs  generator.rs  lib.rs  templates.rs  types.rs
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: next.config.mjs  package.json
docs/.source/: index.ts
docs/app/: layout.tsx  page.tsx
docs/app/api/search/: route.ts
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: architecture.mdx  index.mdx  meta.json
docs/content/docs/cli/: index.mdx
docs/content/docs/configuration/: index.mdx  inventory.mdx  meta.json  testbed.mdx
docs/content/docs/development/: contributing.mdx  docker.mdx  meta.json
docs/content/docs/getting-started/: installation.mdx  quickstart.mdx
docs/content/docs/guides/: device-operations.mdx  meta.json  reporting.mdx  sdn-operations.mdx  test-framework.mdx  testbed-management.mdx  topology-guide.mdx  unh-iol-setup.mdx
docs/lib/: source.ts
docs/scripts/: generate.sh
