[package]
name = "sonic-config"
description = "TOML configuration management for SONiC management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
ipnetwork = { workspace = true }
uuid = { workspace = true }
