[package]
name = "sonic-device"
description = "Device abstraction layer for SONiC network devices"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonic-core = { workspace = true }
sonic-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ipnetwork = { workspace = true }
regex = { workspace = true }
