[package]
name = "sonic-mgmt-cli"
description = "Interactive CLI for SONiC network management and testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sonic-mgmt"
path = "src/main.rs"

[dependencies]
sonic-core = { workspace = true }
sonic-config = { workspace = true }
sonic-device = { workspace = true }
sonic-testbed = { workspace = true }
sonic-topology = { workspace = true }
sonic-testing = { workspace = true }
sonic-reporting = { workspace = true }
sonic-sdn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
ipnetwork = { workspace = true }
