[package]
name = "sonic-reporting"
description = "Test reporting, JUnit parsing, and analytics for SONiC testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonic-core = { workspace = true }
sonic-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
