[package]
name = "sonic-sdn"
description = "SDN protocol support (gNMI, gNOI, P4Runtime) for SONiC management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonic-core = { workspace = true }
sonic-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
