[package]
name = "sonic-testing"
description = "Test execution framework for SONiC network testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonic-core = { workspace = true }
sonic-config = { workspace = true }
sonic-device = { workspace = true }
sonic-testbed = { workspace = true }
sonic-topology = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
